--- a/debian/po/he.po
+++ b/debian/po/he.po
@@ -21,14 +21,14 @@
 # Meni Livne <livne@kde.org>, 2000.
 # Meital Bourvine <meitalbourvine@gmail.com>, 2007.
 # Lior Kaplan <kaplan@debian.org>, 2004-2007, 2008, 2010, 2011, 2015, 2017.
-# Yaron Shahrabani <sh.yaron@gmail.com>, 2018, 2019, 2020.
+# Yaron Shahrabani <sh.yaron@gmail.com>, 2018, 2019, 2020, 2021.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: console-setup@packages.debian.org\n"
 "POT-Creation-Date: 2020-10-28 20:01+0000\n"
-"PO-Revision-Date: 2020-10-31 02:27+0000\n"
+"PO-Revision-Date: 2021-12-03 23:44+0000\n"
 "Last-Translator: Yaron Shahrabani <sh.yaron@gmail.com>\n"
 "Language-Team: Hebrew (https://www.transifex.com/yaron/teams/79473/he/)\n"
 "Language: he\n"
@@ -57,7 +57,7 @@ msgstr "לאפשר למערכת לבחור גופן מתאים"
 #. :sl3:
 #: ../console-setup.templates:4001
 msgid "framebuffer only"
-msgstr "framebuffer בלבד"
+msgstr "מכלא חוזי בלבד"
 
 #. Type: select
 #. Choices
@@ -243,8 +243,8 @@ msgid ""
 "If you don't use a framebuffer, the choices that start with \".\" will "
 "reduce the number of available colors on the console."
 msgstr ""
-"אם לא נעשה שימוש ב־framebuffer, האפשרויות המתחילות ב־„.” תצמצמנה את מספר "
-"הצבעים הזמינים במסוף."
+"אם לא נעשה שימוש במכלא חוזי, האפשרויות המתחילות ב־„.” תצמצמנה את מספר הצבעים "
+"הזמינים במסוף."
 
 #. Type: select
 #. Description
@@ -287,7 +287,7 @@ msgid ""
 "TerminusBold (if you use a framebuffer) or TerminusBoldVGA (otherwise)."
 msgstr ""
 "אם עדיף לך להשתמש בגרסה עבה של הגופן Terminus, ניתן לבחור ב־TerminusBold "
-"(לשימוש עם framebuffer) או TerminusBoldVGA (לכל מקרה אחר)."
+"(לשימוש עם מכלא חוזי) או ב־TerminusBoldVGA (לכל מקרה אחר)."
 
 #. Type: select
 #. Description
@@ -317,7 +317,7 @@ msgstr ""
 msgid ""
 "Please select the size of the font for the console.  Some font sizes require "
 "framebuffer."
-msgstr "נא לבחור בגודל הגופן עבור המסוף.  חלק מגדלי הגופן דורשים framebuffer."
+msgstr "נא לבחור בגודל הגופן עבור המסוף.  חלק מגדלי הגופן דורשים מכלא חוזי."
 
 #. Type: select
 #. Description
