--- a/debian/po/cy.po
+++ b/debian/po/cy.po
@@ -21,8 +21,8 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: console-setup@packages.debian.org\n"
 "POT-Creation-Date: 2020-10-28 20:01+0000\n"
-"PO-Revision-Date: 2019-08-28 18:10+0000\n"
-"Last-Translator: leela <53352@protonmail.com>\n"
+"PO-Revision-Date: 2022-03-06 22:56+0000\n"
+"Last-Translator: Ceiri Wyn Tudur <ceiri.tudur@gmail.com>\n"
 "Language-Team: Welsh <>\n"
 "Language: cy\n"
 "MIME-Version: 1.0\n"
@@ -85,9 +85,8 @@ msgstr "# Syrilig - ieithoedd ddim yn Slafig"
 #. Choices
 #. :sl3:
 #: ../console-setup.templates:5001
-#, fuzzy
 msgid ". Cyrillic - non-Slavic languages (for blind users)"
-msgstr "# Syrilig - ieithoedd ddim yn Slafig"
+msgstr ". Syrilig - ieithoedd ddim yn Slafig (ar gyfer defnyddwyr dall)"
 
 #. Type: select
 #. Choices
@@ -100,9 +99,8 @@ msgstr "# Syrilig - ieithoedd Slafig (hefyd Bosnieg a Serbeg Ladin)"
 #. Choices
 #. :sl3:
 #: ../console-setup.templates:5001
-#, fuzzy
 msgid ". Cyrillic - Slavic languages (for blind users)"
-msgstr "# Syrilig - ieithoedd Slafig (hefyd Bosnieg a Serbeg Ladin)"
+msgstr ". Syrilig - ieithoedd Slafig (ar gyfer defnyddwyr dall)"
 
 #. Type: select
 #. Choices
@@ -130,7 +128,7 @@ msgstr "# Groeg"
 #. :sl3:
 #: ../console-setup.templates:5001
 msgid ". Greek (for blind users)"
-msgstr ""
+msgstr ". Groegaidd (ar gyfer defnyddwyr dall)"
 
 #. Type: select
 #. Choices
