--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -17,7 +17,7 @@
 # #
 # Translations from iso-codes:
 # Translations taken from ICU SVN on 2007-09-09
-# Holger Wansing <hwansing@mailbox.org>, 2019, 2020.
+# Holger Wansing <hwansing@mailbox.org>, 2019, 2020, 2021, 2022.
 # Holger Wansing <linux@wansing-online.de>, 2008 - 2018.
 # Jens Seidel <jensseidel@users.sf.net>, 2005, 2006, 2007, 2008.
 # Dennis Stampfer <seppy@debian.org>, 2003, 2004, 2005.
@@ -40,7 +40,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: console-setup@packages.debian.org\n"
 "POT-Creation-Date: 2020-10-28 20:01+0000\n"
-"PO-Revision-Date: 2020-10-28 22:05+0100\n"
+"PO-Revision-Date: 2023-01-27 07:43+0100\n"
 "Last-Translator: Holger Wansing <hwansing@mailbox.org>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "Language: de\n"
@@ -304,7 +304,7 @@ msgid ""
 "If you prefer a bold version of the Terminus font, choose either "
 "TerminusBold (if you use a framebuffer) or TerminusBoldVGA (otherwise)."
 msgstr ""
-"Falls Sie von Terminus die fette Variante vorziehen, wählen Sie entweder "
+"Falls Sie die fette Variante von Terminus vorziehen, wählen Sie entweder "
 "TerminusBold (falls Sie einen Framebuffer verwenden) oder andernfalls "
 "TerminusBoldVGA."
 
