--- a/debian/po/eu.po
+++ b/debian/po/eu.po
@@ -21,20 +21,21 @@
 # Piarres Beobide <pi@beobide.net>, 2008.
 # Xabier Bilbao <xabidu@gmail.com>, 2008.
 # Iñaki Larrañaga Murgoitio <dooteo@zundan.com>, 2020.
+# Gontzal Manuel Pujana Onaindia <thadahdenyse@gmail.com>, 2022.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: di-sublevel1_eu\n"
 "Report-Msgid-Bugs-To: console-setup@packages.debian.org\n"
 "POT-Creation-Date: 2020-10-28 20:01+0000\n"
-"PO-Revision-Date: 2020-11-03 18:23+0100\n"
-"Last-Translator: Iñaki Larrañaga Murgoitio <dooteo@zundan.com>\n"
+"PO-Revision-Date: 2022-06-09 19:45+0000\n"
+"Last-Translator: Gontzal Manuel Pujana Onaindia <thadahdenyse@gmail.com>\n"
 "Language-Team: Basque <librezale@librezale.eus>\n"
 "Language: eu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #. Type: text
 #. Description
@@ -1003,7 +1004,7 @@ msgstr "Bulgariera (diseinu fonetikoa)"
 #. :sl1:
 #: ../keyboard-configuration.templates:16001
 msgid "Burmese"
-msgstr "Birmaniera "
+msgstr "Birmaniera"
 
 #. Type: select
 #. Choices
