--- a/debian/po/kk.po
+++ b/debian/po/kk.po
@@ -8,7 +8,7 @@
 # This file is distributed under the same license as debian-installer.
 #
 # Talgat Daniyarov
-# Baurzhan Muftakhidinov <baurthefirst@gmail.com>, 2008-2017
+# Baurzhan Muftakhidinov <baurthefirst@gmail.com>, 2008-2022
 # Dauren Sarsenov <daur88@inbox.ru>, 2008, 2009
 #
 # Translations from iso-codes:
@@ -23,7 +23,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: console-setup@packages.debian.org\n"
 "POT-Creation-Date: 2020-10-28 20:01+0000\n"
-"PO-Revision-Date: 2018-12-02 20:16+0500\n"
+"PO-Revision-Date: 2022-12-04 17:19+0600\n"
 "Last-Translator: Baurzhan Muftakhidinov <baurthefirst@gmail.com>\n"
 "Language-Team: Kazakh\n"
 "Language: kk\n"
@@ -36,7 +36,7 @@ msgstr ""
 #. :sl3:
 #: ../console-setup.templates:2001
 msgid "Do not change the boot/kernel font"
-msgstr "boot/kernel қарібін өзгертпеңіз"
+msgstr "boot/kernel қарібін өзгертпеу"
 
 #. Type: text
 #. Description
@@ -308,13 +308,12 @@ msgstr ""
 #. Description
 #. :sl3:
 #: ../console-setup.templates:8001
-#, fuzzy
 msgid ""
 "Please select the size of the font for the console.  Some font sizes require "
 "framebuffer."
 msgstr ""
-"Консоль үшін қаріп өлшемін таңдаңыз. Салыстыру үшін, компьютер жүктелген "
-"кезде 8x16 өлшемді қаріп қолданылаған."
+"Консоль үшін қаріп өлшемін таңдаңыз.  Кейбір қаріптер фреймбуферді талап "
+"етеді."
 
 #. Type: select
 #. Description
@@ -722,8 +721,8 @@ msgid ""
 msgstr ""
 "Оң жақ Alt немесе Caps Lock пернелері жиі ыңғайлылық есебінен қолданылады "
 "(соңғы жағдайда, қалыпты Caps ауыстыру үшін Shift+Caps Lock қолданылады). Alt"
-"+Shift тіркесі де жиі қолданылады; бірақта, ол тіркесті қолданатын Emacs не "
-"басқа қолданбалар оны жоғалтатын болады."
+"+Shift тіркесі де жиі қолданылады; бірақта, ол тіркесті қолданатын Emacs "
+"немесе басқа қолданбалар оны жоғалтатын болады."
 
 #. Type: select
 #. Description
@@ -953,7 +952,7 @@ msgstr "Бельгиялық"
 #. :sl1:
 #: ../keyboard-configuration.templates:16001
 msgid "Berber (Latin)"
-msgstr ""
+msgstr "Бербер (латын)"
 
 #. Type: select
 #. Choices
@@ -1226,14 +1225,14 @@ msgstr "Кореялық"
 #. :sl1:
 #: ../keyboard-configuration.templates:16001
 msgid "Kurdish (F layout)"
-msgstr "Курд (F layout)"
+msgstr "Курд (F жаймасы)"
 
 #. Type: select
 #. Choices
 #. :sl1:
 #: ../keyboard-configuration.templates:16001
 msgid "Kurdish (Q layout)"
-msgstr "Курд (Q layout)"
+msgstr "Курд (Q жаймасы)"
 
 #. Type: select
 #. Choices
