--- a/debian/po/mk.po
+++ b/debian/po/mk.po
@@ -9,6 +9,7 @@
 #
 # Georgi Stanojevski, <glisha@gmail.com>, 2004, 2005, 2006.
 # Georgi Stanojevski <georgis@unet.com.mk>, 2005, 2006.
+# Kristijan Fremen Velkovski <me@krisfremen.com>, 2023.
 #
 # Translations from iso-codes:
 #   Alastair McKinstry <mckinstry@computer.org>, 2002
@@ -24,8 +25,8 @@ msgstr ""
 "Project-Id-Version: debian-installer_packages_po_sublevel1_mk\n"
 "Report-Msgid-Bugs-To: console-setup@packages.debian.org\n"
 "POT-Creation-Date: 2020-10-28 20:01+0000\n"
-"PO-Revision-Date: 2019-08-28 18:10+0000\n"
-"Last-Translator: leela <53352@protonmail.com>\n"
+"PO-Revision-Date: 2023-02-02 11:37+0000\n"
+"Last-Translator: Kristijan Fremen Velkovski <me@krisfremen.com>\n"
 "Language-Team: Macedonian <>\n"
 "Language: mk\n"
 "MIME-Version: 1.0\n"
@@ -87,9 +88,8 @@ msgstr "# Кирилица - несловенски јазици"
 #. Choices
 #. :sl3:
 #: ../console-setup.templates:5001
-#, fuzzy
 msgid ". Cyrillic - non-Slavic languages (for blind users)"
-msgstr "# Кирилица - несловенски јазици"
+msgstr ". Кирилица - несловенски јазици (за слепи корисници)"
 
 #. Type: select
 #. Choices
@@ -377,9 +377,9 @@ msgid ""
 "multiple common layouts. Please select the country of origin for the "
 "keyboard of this computer."
 msgstr ""
-"Распоредот на буквите на тастатурата  варира зависно од земјата, некои земји "
-"имаат повеќе заеднички распореди. Ве можам изберете земја за тастатурата на "
-"овој компјутер."
+"Распоредот на буквите на тастатурата зависно на државата, со некои држави "
+"имајќо повеќе заеднички распореди. Ве молиме изберете држава за тастатурата "
+"на овој компјутер."
 
 #. Type: select
 #. Description
@@ -965,7 +965,7 @@ msgstr "Белгиски"
 #. :sl1:
 #: ../keyboard-configuration.templates:16001
 msgid "Berber (Latin)"
-msgstr ""
+msgstr "Берберски (Латински)"
 
 #. Type: select
 #. Choices
@@ -992,9 +992,8 @@ msgstr "Британски англиски"
 #. Choices
 #. :sl1:
 #: ../keyboard-configuration.templates:16001
-#, fuzzy
 msgid "Bulgarian (BDS layout)"
-msgstr "Бугарски (фонетски распоред)"
+msgstr "Бугарски (BDS распоред)"
 
 #. Type: select
 #. Choices
@@ -1008,7 +1007,7 @@ msgstr "Бугарски (фонетски распоред)"
 #. :sl1:
 #: ../keyboard-configuration.templates:16001
 msgid "Burmese"
-msgstr ""
+msgstr "Бурмански"
 
 #. Type: select
 #. Choices
@@ -1323,7 +1322,7 @@ msgstr "Персиска"
 #. :sl1:
 #: ../keyboard-configuration.templates:16001
 msgid "Philippines"
-msgstr ""
+msgstr "Филипини"
 
 #. Type: select
 #. Choices
@@ -1428,7 +1427,7 @@ msgstr "Шведско-германски"
 #. :sl1:
 #: ../keyboard-configuration.templates:16001
 msgid "Tajik"
-msgstr ""
+msgstr "Таџикистан"
 
 #. Type: select
 #. Choices
@@ -1456,7 +1455,7 @@ msgstr "Тајландски"
 #. :sl1:
 #: ../keyboard-configuration.templates:16001
 msgid "Tibetan"
-msgstr ""
+msgstr "Тибетански"
 
 #. Type: select
 #. Choices
