--- a/debian/po/nb.po
+++ b/debian/po/nb.po
@@ -12,7 +12,7 @@
 # Axel Bojer <axelb@skolelinux.no>, 2004.
 # Bjørn Steensrud <bjornst@powertech.no>, 2004-2007.
 # Hans Fredrik Nordhaug <hans@nordhaug.priv.no>, 2005, 2007-2015.
-# Petter Reinholdtsen <pere@hungry.com>, 2017, 2020.
+# Petter Reinholdtsen <pere@hungry.com>, 2017, 2020, 2021.
 # Allan Nordhøy <epost@anotheragency.no>, 2019, 2020.
 #
 # Translations from iso-codes:
@@ -35,8 +35,8 @@ msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: console-setup@packages.debian.org\n"
 "POT-Creation-Date: 2020-10-28 20:01+0000\n"
-"PO-Revision-Date: 2020-11-19 00:28+0000\n"
-"Last-Translator: Allan Nordhøy <epost@anotheragency.no>\n"
+"PO-Revision-Date: 2023-05-06 12:58+0000\n"
+"Last-Translator: Kjetil Sørlund <kjetil@sorlund.no>\n"
 "Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.uio.no>\n"
 "Language: nb\n"
 "MIME-Version: 1.0\n"
@@ -548,7 +548,7 @@ msgstr "Caps Lock"
 #: ../keyboard-configuration.templates:13001
 #: ../keyboard-configuration.templates:14001
 msgid "Right Alt (AltGr)"
-msgstr "Høgre Alt (Alt Gr)"
+msgstr "Høyre Alt (AltGr)"
 
 #. Type: select
 #. Choices
