--- a/debian/po/ro.po
+++ b/debian/po/ro.po
@@ -39,8 +39,8 @@ msgstr ""
 "Project-Id-Version: ro\n"
 "Report-Msgid-Bugs-To: console-setup@packages.debian.org\n"
 "POT-Creation-Date: 2020-10-28 20:01+0000\n"
-"PO-Revision-Date: 2020-12-12 08:29+0000\n"
-"Last-Translator: Sergiu <adinfinitvm@wail.ch>\n"
+"PO-Revision-Date: 2023-06-19 12:51+0000\n"
+"Last-Translator: NicolaeFericitu <cni@disroot.org>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
 "Language: ro\n"
 "MIME-Version: 1.0\n"
@@ -751,7 +751,7 @@ msgstr ""
 #. :sl1:
 #: ../keyboard-configuration.templates:11002
 msgid "Not all listed keys are present on all keyboards."
-msgstr "Unele din tastele afișate aici pot lipsi de pe unele tastaturi."
+msgstr "Nu toate tastele enumerate sunt prezente pe toate tastaturile."
 
 #. Type: select
 #. Choices
@@ -974,7 +974,7 @@ msgstr "Belgiană"
 #. :sl1:
 #: ../keyboard-configuration.templates:16001
 msgid "Berber (Latin)"
-msgstr "Berbera (Latină)"
+msgstr "Berberă (latină)"
 
 #. Type: select
 #. Choices
@@ -1086,7 +1086,7 @@ msgstr "Dvorak"
 #. :sl1:
 #: ../keyboard-configuration.templates:16001
 msgid "Dzongkha"
-msgstr "Dzongkhană"
+msgstr "Dzongkha"
 
 #. Type: select
 #. Choices
@@ -1107,7 +1107,7 @@ msgstr "Estonă"
 #. :sl1:
 #: ../keyboard-configuration.templates:16001
 msgid "Ethiopian"
-msgstr "Etiopian"
+msgstr "Etiopia"
 
 #. Type: select
 #. Choices
@@ -1149,7 +1149,7 @@ msgstr "Greacă"
 #. :sl1:
 #: ../keyboard-configuration.templates:16001
 msgid "Gujarati"
-msgstr "Gujaratineză"
+msgstr "Gujarati"
 
 #. Type: select
 #. Choices
@@ -1226,7 +1226,7 @@ msgstr "Cazacă"
 #. :sl1:
 #: ../keyboard-configuration.templates:16001
 msgid "Khmer"
-msgstr "Khmer"
+msgstr "Khmeră"
 
 #. Type: select
 #. Choices
@@ -1261,7 +1261,7 @@ msgstr "Curdă (aranjament Q)"
 #. :sl1:
 #: ../keyboard-configuration.templates:16001
 msgid "Lao"
-msgstr "Loațiană"
+msgstr "Laoțiană"
 
 #. Type: select
 #. Choices
@@ -1450,14 +1450,14 @@ msgstr "Tamilă"
 #. :sl1:
 #: ../keyboard-configuration.templates:16001
 msgid "Telugu"
-msgstr "Teluguă"
+msgstr "Telugu"
 
 #. Type: select
 #. Choices
 #. :sl1:
 #: ../keyboard-configuration.templates:16001
 msgid "Thai"
-msgstr "Tai"
+msgstr "Thai"
 
 #. Type: select
 #. Choices
