--- a/debian/po/tr.po
+++ b/debian/po/tr.po
@@ -24,21 +24,21 @@
 # Tobias Quathamer <toddy@debian.org>, 2007.
 # Translations taken from ICU SVN on 2007-09-09
 # Ömer Fadıl USTA <omer_fad@hotmail.com>, 1999.
-# Fatih Altun <fatih.altun@pardus.org.tr>, 2021.
+# Fatih Altun <fatih.altun@pardus.org.tr>, 2021-2023.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: console-setup@packages.debian.org\n"
 "POT-Creation-Date: 2020-10-28 20:01+0000\n"
-"PO-Revision-Date: 2021-07-08 13:18+0300\n"
+"PO-Revision-Date: 2023-07-05 19:50+0000\n"
 "Last-Translator: Fatih Altun <fatih.altun@pardus.org.tr>\n"
 "Language-Team: Debian L10N Turkish\n"
 "Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #. Type: text
 #. Description
@@ -306,7 +306,7 @@ msgstr ""
 #. :sl3:
 #: ../console-setup.templates:7001 ../console-setup.templates:8001
 msgid "Font size:"
-msgstr "Yazıtipi boyutu"
+msgstr "Yazı tipi boyutu:"
 
 #. Type: select
 #. Description
@@ -316,9 +316,8 @@ msgid ""
 "Please select the size of the font for the console. For reference, the font "
 "used when the computer boots has size 8x16."
 msgstr ""
-"Lütfen uçbiriminde kullanmak istediğiniz yazıtipi boyutunu seçin.  Fikir "
-"edinmeniz açısından; bilgisayarınızın başlarken kullandığı yazıtipinin "
-"boyutu 8x16'dır."
+"Lütfen uçbirim için yazı tipi boyutunu seçin. Referans olarak, bilgisayar "
+"açılırken kullanılan yazı tipinin boyutu 8x16'dır."
 
 #. Type: select
 #. Description
@@ -416,8 +415,8 @@ msgid ""
 "The current keyboard layout in the configuration file /etc/default/keyboard "
 "is defined as XKBLAYOUT=\"${XKBLAYOUT}\" and XKBVARIANT=\"${XKBVARIANT}\"."
 msgstr ""
-"/etc/default/keyboard yapılandırma dosyasındaki klavye düzeni  XKBLAYOUT="
-"\"${XKBLAYOUT}\" ve  XKBVARIANT=\"${XKBVARIANT}\" olarak tanımlanmış."
+"/etc/default/keyboard yapılandırma dosyasındaki klavye düzeni XKBLAYOUT="
+"\"${XKBLAYOUT}\" ve XKBVARIANT=\"${XKBVARIANT}\" olarak tanımlanmış."
 
 #. Type: boolean
 #. Description
@@ -481,7 +480,7 @@ msgid ""
 "are defined as XKBOPTIONS=\"${XKBOPTIONS}\"."
 msgstr ""
 "/etc/default/keyboard yapılandırma dosyasında kullanımdaki klavye "
-"seçenekleri  XKBOPTIONS=\"${XKBOPTIONS}\" olarak tanımlanmış."
+"seçenekleri XKBOPTIONS=\"${XKBOPTIONS}\" olarak tanımlanmış."
 
 #. Type: boolean
 #. Description
@@ -845,7 +844,7 @@ msgid ""
 "often printed as an extra symbol on keys."
 msgstr ""
 "Bazı klavye düzenlerinde AltGr çeşitli karakterlerin girilmesini sağlayan "
-"bir niteleyici tuştur.  Bu karakterlerin büyük bir bölümü, yabancı para "
+"bir niteleyici tuştur. Bu karakterlerin büyük bir bölümü, yabancı para "
 "simgeleri ve aksanlı harfler gibi, kullanılan klavye düzenine ait dilde "
 "yaygın olmayan karakterlerden oluşur. Eğer bir tuşta üçüncü bir simge "
 "görüyorsanız AltGr tuşu çoğunlukla bu simgenin girilmesini sağlamakta "
