--- a/debian/po/uk.po
+++ b/debian/po/uk.po
@@ -17,20 +17,22 @@
 # Maxim V. Dziumanenko <dziumanenko@gmail.com>, 2010.
 # Yuri Chornoivan <yurchor@ukr.net>, 2010, 2011, 2012, 2013.
 # Anton Gladky <gladk@debian.org>, 2011-2016
+# Taras Panchenko <top39@ukr.net>, 2021.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: uk\n"
 "Report-Msgid-Bugs-To: console-setup@packages.debian.org\n"
 "POT-Creation-Date: 2020-10-28 20:01+0000\n"
-"PO-Revision-Date: 2019-03-20 22:31+0100\n"
-"Last-Translator: Anton Gladky <gladk@debian.org>\n"
+"PO-Revision-Date: 2021-12-03 23:44+0000\n"
+"Last-Translator: Taras Panchenko <top39@ukr.net>\n"
 "Language-Team: Ukrainian <translation-team-uk@lists.sourceforge.net>\n"
 "Language: uk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 
 #. Type: text
 #. Description
@@ -314,13 +316,12 @@ msgstr ""
 #. Description
 #. :sl3:
 #: ../console-setup.templates:8001
-#, fuzzy
 msgid ""
 "Please select the size of the font for the console.  Some font sizes require "
 "framebuffer."
 msgstr ""
-"Будь ласка, виберіть розмір шрифту для консолі. Для порівняння, шрифт, що "
-"використовується під час завантаження комп'ютера, має розмір 8x16."
+"Будь ласка, виберіть розмір шрифту для консолі. Деякі розміри шрифтів "
+"вимагають кадрового буфера."
 
 #. Type: select
 #. Description
@@ -879,7 +880,7 @@ msgid ""
 "the Control+period combination as a Compose key."
 msgstr ""
 "Клавіша Compose не працює на текстових консолях в режимі Unicode. В інших "
-"режимах, незалежно від від того, що ви оберете тут, завжди можна замінити "
+"режимах, незалежно від того, що ви оберете тут, завжди можна замінити "
 "клавішу Compose комбінацією клавіш Control+код та отримати аналогічний "
 "функціонал."
 
@@ -963,7 +964,7 @@ msgstr "Бельгійська"
 #. :sl1:
 #: ../keyboard-configuration.templates:16001
 msgid "Berber (Latin)"
-msgstr ""
+msgstr "Берберська (латин.)"
 
 #. Type: select
 #. Choices
